# AvgDWIs

./: .gitignore  AvgDWIs.cxx  AvgDWIs.xml  CMakeLists.txt
src/: AvgDWIs.cxx  AvgDWIsCLP.h  CMakeLists.txt
